add purple trace for avg daily usage

--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,11 @@
                 <span id="hover-daily-energy">–</span>
               </div>
               <div class="hover-row-new">
-                <span class="hover-label text-avg">Typical Usage (kWh):</span>
+                <span class="hover-label text-avg">Typical Daily Usage (kWh):</span>
+                <span id="hover-typical-daily-energy">–</span>
+              </div>
+              <div class="hover-row-new">
+                <span class="hover-label text-avg">Typical Cumul. Usage (kWh):</span>
                 <span id="hover-avg-trend">–</span>
               </div>
               <div class="hover-row-new">
